# RAG-Optimization

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  data_updated.json  data_utils.py  default_rag_config.json  eval.json  eval_2.json  eval_500.json  eval_500_fixed_no_answer_100_gpt-3.5-turbo_text-embedding-3-large.json  eval_500_fixed_no_answer_100_gpt-3.5-turbo_text-embedding-ada-002.json  eval_500_fixed_no_answer_200_gpt-3.5-turbo_text-embedding-3-small.json  eval_500_fixed_no_answer_200_gpt-3.5-turbo_text-embedding-ada-002.json  eval_500_fixed_no_answer_400_gpt-3.5-turbo_text-embedding-ada-002.json  eval_500_fixed_no_answer_600_gpt-3.5-turbo_text-embedding-3-small.json  eval_500_fixed_no_answer_600_gpt-3.5-turbo_text-embedding-ada-002.json  eval_500_fixed_no_answer_800_gpt-3.5-turbo_text-embedding-3-small.json  eval_500_fixed_no_answer_800_gpt-3.5-turbo_text-embedding-ada-002.json  evaluation.py  exact_thresh_by_qid.json  f1_thresh_by_qid.json  hello.py  nb_experiments.ipynb  pred.json  pred_2.json  pred_500.json  pred_500_fixed_no_answer.json  pred_500_fixed_no_answer_100_gpt-3.5-turbo_text-embedding-3-large.json  pred_500_fixed_no_answer_100_gpt-3.5-turbo_text-embedding-3-small.json  pred_500_fixed_no_answer_100_gpt-3.5-turbo_text-embedding-ada-002.json  pred_500_fixed_no_answer_200_gpt-3.5-turbo_text-embedding-3-small.json  pred_500_fixed_no_answer_200_gpt-3.5-turbo_text-embedding-ada-002.json  pred_500_fixed_no_answer_400_gpt-3.5-turbo_text-embedding-ada-002.json  pred_500_fixed_no_answer_600_gpt-3.5-turbo_text-embedding-3-small.json  pyproject.toml  (+8 more)
(+100 files in other folders)
